changed overview zoom level

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             titleOverview.innerHTML = `<h2 class="overview-h2">Escursioni <br/> ${mese}</h2> <img src="./Images/logo_cai.png" alt="logo Club Alpino Italiano" width="211" height="211">`;
             container.appendChild(titleOverview);
 
-            const bounds = L.latLngBounds([42.615138889, 5.839861111], [47.719027778, 14.278750000]);
+            const bounds = L.latLngBounds([43, 6.405], [47.287, 14.030]);
             overviewMap.fitBounds(bounds);
         }
 
